--- a/src/rabbitmq-c-async/linux/amqp_async.vcxproj.filters
+++ b/src/rabbitmq-c-async/linux/amqp_async.vcxproj.filters
@@ -14,6 +14,9 @@
     <ClInclude Include="..\src\amqp_async.h">
       <Filter>src</Filter>
     </ClInclude>
+    <ClInclude Include="..\ThirdParty\rabbitmq-c\rabbitmq-c\librabbitmq\amqp_private.h">
+      <Filter>src</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="README.md" />
